--- a/PI_extraction.ipynb
+++ b/PI_extraction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -19,13 +19,22 @@
      "output_type": "stream",
      "text": [
       "Extraction Succeeded\n",
-      "Please wait. Now writing file......\n",
-      "Finished, 409 elements saved.\n"
+      "Please wait. Now writing file to 'pi-title.tsv'......\n",
+      "Finished, 1023 elements saved.\n"
      ]
     }
    ],
    "source": [
     "import time\n",
+    "\n",
+    "def name_modify(name):\n",
+    "    if not name.find('-')==-1:\n",
+    "        name_f = name.split('-')\n",
+    "        name1 = name_f[0]+'-'+name_f[1].capitalize()\n",
+    "        name2 = name_f[0]+name_f[1]\n",
+    "    else:\n",
+    "        name1 = name2 = name\n",
+    "    return [name1, name2]\n",
     "\n",
     "def read_and_catch(file_loc, ref_loc):\n",
     "    \n",
@@ -33,7 +42,12 @@
     "    text = f.readlines()\n",
     "    f.close\n",
     "    f = open(ref_loc)\n",
-    "    ref_list = [i.strip() for i in f.readlines()]\n",
+    "    ref_list = {}\n",
+    "    for i in f.readlines():\n",
+    "        tmp = i.strip().split('\\t')\n",
+    "        for each in tmp:\n",
+    "            for name in name_modify(each):\n",
+    "                ref_list[name] = name_modify(tmp[0])[1]\n",
     "    f.close\n",
     "    \n",
     "    ready = finish = True\n",
@@ -46,12 +60,12 @@
     "            new = []\n",
     "            name = line.strip()[3:]\n",
     "            if name in ref_list:\n",
-    "                new += [name]\n",
+    "                new += [ref_list[name]]\n",
     "            ready = False\n",
     "        if head == \"  \" and (not ready) and (finish):\n",
     "            name = line.strip()\n",
-    "            if name in ref_list:\n",
-    "                new += [name]\n",
+    "            if name in ref_list.keys():\n",
+    "                new += [ref_list[name]]\n",
     "        if head == \"TI\" and (not ready) and (finish):\n",
     "            title = line.strip()[3:]\n",
     "            finish = False\n",
@@ -70,8 +84,8 @@
     "if __name__ == '__main__':\n",
     "    loc = \"/home/zaczou/projects/network_science/data/\"\n",
     "    titles = [\"title\"]\n",
-    "    authors = [[[\"author\"]]]\n",
-    "    for year in range(2015,2020):\n",
+    "    authors = [[\"author\"]]\n",
+    "    for year in [2004,2005,2006,2007,2008,2009,2010,2011,2013,2014,2015,2016,2017,2018,2019]:\n",
     "        [tmp1, tmp2] = read_and_catch(loc+\"download_%d.txt\"%year,loc+\"pi_list.txt\")\n",
     "        titles += tmp1\n",
     "        authors += tmp2\n",
@@ -80,12 +94,10 @@
     "    f = open(loc+\"pi-title.tsv\", 'w')\n",
     "    for i in range(0,len(titles)):\n",
     "        print(\"%s\"%titles[i], end = '', file = f)\n",
-    "        for value in authors[i]:\n",
-    "            print(\"\\t%s\"%value, end = '', file = f)\n",
-    "        print(\"\\n\", end = '', file = f)\n",
+    "        print(\"\\t%s\\n\"%authors[i][0], end = '', file = f)    \n",
     "    f.close\n",
-    "    print(\"Please wait. Now writing file......\")\n",
-    "    time.sleep(30)\n",
+    "    print(\"Please wait. Now writing file to 'pi-title.tsv'......\")\n",
+    "    time.sleep(60)\n",
     "    print(\"Finished, %d elements saved.\"%(len(titles)-1))"
    ]
   },
